# smart-home-sim

./: .env.example  .gitignore  ARCHITECTURE.md  CODING_STYLE.md  CONTRIBUTING.md  DATA_MODEL.md  DEPENDENCIES.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: Dockerfile  package.json
api/src/: index.js
api/src/mqtt/: client.js
api/src/routes/: devices.js
api/src/state/: store.js
api/src/ws/: server.js
mosquitto/config/: mosquitto.conf
simulator/: CMakeLists.txt  Dockerfile  main.cpp  watch.sh
simulator/core/scheduler/: event_scheduler.cpp  event_scheduler.hpp
simulator/data/: device_models.json  devices.json
simulator/devices/: virtual_device.cpp
simulator/devices/thermostat/: virtual_thermostat.hpp
simulator/src/: CMakeLists.txt  main.cpp
simulator/src/cli/: cli.cpp  cli.hpp
simulator/src/core/adapter_manager/: adapter_manager.cpp  adapter_manager.hpp  protocol_client.cpp  protocol_client.hpp
simulator/src/core/db/: sqlite_store.cpp  sqlite_store.hpp
simulator/src/core/device_engine/: device_engine.cpp  device_engine.hpp
simulator/src/core/event_engine/: event.hpp  event_engine.cpp  event_engine.hpp
simulator/src/core/ip_manager/: ip_manager.cpp  ip_manager.hpp
simulator/src/core/scheduler/: event_scheduler.cpp
simulator/src/data/: device_models.json  seed.sql
simulator/src/devices/: virtual_device.cpp  virtual_device.hpp  virtual_device_model.hpp
simulator/src/devices/light/: virtual_light.cpp  virtual_light.hpp
simulator/src/devices/motion_sensor/: virtual_motion_sensor.cpp  virtual_motion_sensor.hpp
simulator/src/devices/thermostat/: virtual_thermostat.cpp  virtual_thermostat.hpp
simulator/src/protocols/mqtt/: mqtt_client.cpp  mqtt_client.hpp
simulator/src/protocols/rest/: rest_client.cpp  rest_client.hpp  rest_server.cpp  rest_server.hpp  rest_servers_manager.cpp  rest_servers_manager.hpp
simulator/src/protocols/ws/: ws_client.cpp  ws_client.hpp  ws_servers_manager.cpp  ws_servers_manager.hpp
simulator/src/server/: simulator_api.cpp  simulator_api.hpp
simulator/tests/: CMakeLists.txt
simulator/tests/core/: test_device_engine.cpp  test_event_engine.cpp
simulator/tests/devices/: test_virtual_device_model.cpp  test_virtual_light.cpp  test_virtual_motion_sensor.cpp  test_virtual_thermostat.cpp
simulator/tests/protocols/: test_rest_components.cpp  test_virtual_device_mqtt.cpp
